<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainTitle">Contact Manager</string>
    <string name="contactName">Name</string>
    <string name="contactNumber">Number</string>
    <string name="contactCreate">Create Contact</string>
    <string name="title_activity_save_xml">MainActivity</string>
    <string name="submit">Ok</string>

</resources>
